# test-burn-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  data.rs  infer.rs  main.rs  model.rs  train.rs
