[package]
edition = "2021"
name = "test-burn-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = {version = "0.9.0", features = ["wgpu", "dataset-sqlite-bundled", "train", "train-ui"]}
image = "0.24.7"
log = "0.4.20"
rand = "0.8.5"
serde = {version = "1.0.189", features = ["std", "derive"]}
